--- a/404.html
+++ b/404.html
@@ -160,6 +160,14 @@
     </div>
 </footer>
 
+<script type="text/javascript">
+var uyan_config = {
+	'du': 'yuanboshe.github.io', 		
+	'su': '404.html'
+};
+</script>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1803538"></script>
+
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="http://cdn.bootcss.com/jquery/1.10.2/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
