--- a/about.html
+++ b/about.html
@@ -166,6 +166,14 @@ Email: yuanboshe@126.com
     </div>
 </footer>
 
+<script type="text/javascript">
+var uyan_config = {
+	'du': 'yuanboshe.github.io', 		
+	'su': 'about.html'
+};
+</script>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1803538"></script>
+
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="http://cdn.bootcss.com/jquery/1.10.2/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
