--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="keywords" content="爱啃萝卜,爱啃萝卜机器人,爱啃萝卜官网,aicrobo官网,turtlebot机器人,机器人软件系统,ubuntu for ros,智能移动机器人,slam,yuanboshe">
+	<meta name="keywords" content="爱啃萝卜公司,爱啃萝卜机器人,爱啃萝卜官网,机器人设计定制,turtlebot机器人,智能移动机器人,机器人硬件,机器人软件系统,ubuntu for ros,slam,yuanboshe">
     <meta name="description" content="AICRobo爱啃萝卜机器人技术（深圳）有限责任公司以“fighting or nothing”为企业宗旨，致力于成为国内领先的服务型机器人操作系统、人工智能解决方案及智能移动机器人设计研发为一体的技术公司。业务已遍及13个省的23个城市，并与包括南京大学LAMDA 研究所和华东师范大学智能机器人运动与视觉实验室在内的25所高校建立了战略合作伙伴关系。">
     <meta name="author" content="aicrobo">
 	<meta name="apple-touch-fullscreen" content="yes">
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 	<meta name="renderer" content="webkit">
-    <title>AICRobo爱啃萝卜官网-智能移动机器人专家！-靠谱的机器人硬件,软件定制！</title>
+    <title>AICRobo官网-爱啃萝卜机器人-智能移动机器人专家！</title>
     <meta name="google-site-verification" content="0mXr6Pg187Q4q6NgNglcunnBiVqqS1L4yKV6loUWYkY"/>
 	<meta name="baidu-site-verification" content="QKTXqDPfbb" />
 	<meta baidu-gxt-verify-token="e040d82b91018704584e4a686e820114">
