--- a/ubuntu_for_ros.html
+++ b/ubuntu_for_ros.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="keywords" content="爱啃萝卜,爱啃萝卜机器人,爱啃萝卜官网,aicrobo官网,turtlebot机器人,机器人软件系统,ubuntu for ros,智能移动机器人,slam,yuanboshe">
+	<meta name="keywords" content="爱啃萝卜公司,爱啃萝卜机器人,爱啃萝卜官网,机器人设计定制,turtlebot机器人,智能移动机器人,机器人硬件,机器人软件系统,ubuntu for ros,slam,yuanboshe">
     <meta name="description" content="AICRobo爱啃萝卜机器人技术（深圳）有限责任公司以“fighting or nothing”为企业宗旨，致力于成为国内领先的服务型机器人操作系统、人工智能解决方案及智能移动机器人设计研发为一体的技术公司。业务已遍及13个省的23个城市，并与包括南京大学LAMDA 研究所和华东师范大学智能机器人运动与视觉实验室在内的25所高校建立了战略合作伙伴关系。">
     <meta name="author" content="aicrobo">
 	<meta name="apple-touch-fullscreen" content="yes">
@@ -111,7 +111,7 @@
 
 	<!-- MAIN -->
 <div class="container-fluid c-section section_3egbpywzlbBKNR" data-c_tl_id="M_4096039ed3a9299c">
-<div class="container c-container container_ubtforros">
+<div class="container c-container container_NTlCsu">
 <h2>Ubuntu for ROS</h2>
 <ul>
 	<li>如果是Windows用户，请安装虚拟机，如VMWare，笔者使用的是 VMWare Workstation 10.0.4，然后参考《<a title="10分钟安装ROS（Windows + 虚拟机）2015-07-19更新" href="http://aicrobo.github.io/blog/2015-07-install_ros_in_10mins_vm_new.html" target="_blank">10分钟安装ROS（Windows + 虚拟机）2015-07-19更新</a>》教程进行安装。</li>
@@ -119,86 +119,94 @@
     <li><span style="color: #f55;"><strong>华东师范大学智能机器人运动与视觉实验室主办<a title="2015中国ROS Summer School" href="http://www.robotics.sei.ecnu.edu.cn/ros2015/" target="_blank">2015中国ROS Summer School</a>，请使用“开发版”Ubuntu for ROS。</strong></span></li>
 </ul>
 
-<div class="row">
-	<div class='col-md-6'>
-		<div class="panel panel-primary">
-			<div class="panel-heading">
-				<h3 class="panel-title"><i class="glyphicon glyphicon-th-list"></i>基础版(Ubuntu 14.04 + Indigo)</h3>
-			</div>
-			<div class="panel-body">
-				<h4>64位</h4>
-				<ul class="simple">
-					<li><p><strong>UROS1404I64BASE_aicrobo_150714 [<a href="http://pan.baidu.com/s/1eQIY8Ye" target="_blank">下载iso</a>]</strong></p>
-					<p>MD5 [46366f2d412c1c2090bdf1783fff6d19]</p></li>
-				</ul>
-				<hr/>
-				<h4>32位</h4>
-				<ul class="simple">
-					<li><p><strong>UROS1404I32BASE_aicrobo_150714 [<a href="http://pan.baidu.com/s/1sjn4j7n" target="_blank">下载iso</a>]</strong></p>
-					<p>MD5 [c9b34c14997718eae31d1938188554d3]</p></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-
-	<div class='col-md-6'>
-		<div class="panel panel-primary">
-			<div class="panel-heading">
-				<h3 class="panel-title"><i class="glyphicon glyphicon-th-list"></i>开发版(Ubuntu 14.04 + Indigo)</h3>
-			</div>
-			<div class="panel-body">
-				<h4>64位</h4>
-				<ul class="simple">
-					<li><p><strong>UROS1404I64DEV_aicrobo_150715 [<a href="http://pan.baidu.com/s/1jGjE918" target="_blank">下载iso</a>]</strong></p>
-					<p>MD5 [8e4a47fbb80c54cb1d4b0b094dac7947]</p></li>
-				</ul>
-				<hr/>
-				<h4>32位</h4>
-				<ul class="simple">
-					<li><p><strong>UROS1404I32DEV_aicrobo_150715 [<a href="http://pan.baidu.com/s/1bnuImCJ" target="_blank">下载iso</a>]</strong></p>
-					<p>MD5 [fe5f62cc1684879b06c88bcd7a564ff8]</p></li>
-				</ul>
-			</div>
-		</div>
-	</div>
+<div class='col-md-6'>
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title"><i class="glyphicon glyphicon-th-list"></i>基础版(Ubuntu 14.04 + Indigo)</h3>
+        </div>
+        <div class="panel-body">
+            <h4>64位</h4>
+            <ul class="simple">
+                <li><p><strong>UROS1404I64BASE_aicrobo_150714 [<a href="http://pan.baidu.com/s/1eQIY8Ye" target="_blank">下载iso</a>]</strong></p>
+                <p>MD5 [46366f2d412c1c2090bdf1783fff6d19]</p></li>
+            </ul>
+            <hr/>
+            <h4>32位</h4>
+            <ul class="simple">
+                <li><p><strong>UROS1404I32BASE_aicrobo_150714 [<a href="http://pan.baidu.com/s/1sjn4j7n" target="_blank">下载iso</a>]</strong></p>
+                <p>MD5 [c9b34c14997718eae31d1938188554d3]</p></li>
+            </ul>
+        </div>
+    </div>
 </div>
 
-<h3>关于Ubuntu for ROS</h3>
-<div class="row">
-	<div class='col-md-6'>
-		<div class="panel panel-success">
-			<div class="panel-heading">
-				<h3 class="panel-title"><i class="glyphicon glyphicon-th-list"></i> 历史：</h3>
-			</div>
-			<div class="panel-body">
-				<ul class="simple">
-					<li>2013年，Ubuntu for ROS诞生于<span style="color: #ff0000;"><strong>南京大学计算机软件新技术国家重点实验室机器学习与数据挖掘研究组（LAMDA）</strong></span>，由负责智能机器人系统架构与开发的佘元博（Yuanbo She）同学设计制作完成。</li>
-					<li>设计制作Ubuntu for ROS的初衷，是节约ROS开发团队的开发环境部署时间。</li>
-					<li>2014年1月30日，作为ExBot网上机器人兴趣小组的创始人之一，Yuanbo She以ExBot小组的名义通过ExBot机器人社区（http://blog.exbot.net/archives/702）对外发布分享Ubuntu for ROS，并编写初级使用教程，让广大ROS爱好者受益。</li>
-					<li>2014年5月20日，发布完520版本后，Ubuntu for ROS的维护工作停止，其他版本以及其他团队的类似定制版Ubuntu与本ROS技术团队无关。</li>
-					<li>2015年7月，设计制作Ubuntu for ROS的原班人马正式全职，重新为大家维护ROS定制版Ubuntu iso，并推出更完善的使用教程。</li>
-				</ul>
-			</div>
-		</div>
-	</div>
+<div class='col-md-6'>
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title"><i class="glyphicon glyphicon-th-list"></i>开发版(Ubuntu 14.04 + Indigo)</h3>
+        </div>
+        <div class="panel-body">
+            <h4>64位</h4>
+            <ul class="simple">
+                <li><p><strong>UROS1404I64DEV_aicrobo_150715 [<a href="http://pan.baidu.com/s/1jGjE918" target="_blank">下载iso</a>]</strong></p>
+                <p>MD5 [8e4a47fbb80c54cb1d4b0b094dac7947]</p></li>
+            </ul>
+            <hr/>
+            <h4>32位</h4>
+            <ul class="simple">
+                <li><p><strong>UROS1404I32DEV_aicrobo_150715 [<a href="http://pan.baidu.com/s/1bnuImCJ" target="_blank">下载iso</a>]</strong></p>
+                <p>MD5 [fe5f62cc1684879b06c88bcd7a564ff8]</p></li>
+            </ul>
+        </div>
+    </div>
+</div>
 
-	<div class='col-md-6'>
-		<div class="panel panel-success">
-			<div class="panel-heading">
-				<h3 class="panel-title"><i class="glyphicon glyphicon-th-list"></i>说明：</h3>
-			</div>
-			<div class="panel-body">
-				<p>Ubuntu for ROS是一款基于ROS开发的定制版Ubuntu系统，按照常规的方式部署和配置ROS学习与开发环境需要有经验的开发者花费数小时甚至一两天（网络不好的情况下）完成，而使用Ubuntu for ROS对于一个完全没有经验的开发者来说，也只需要10分钟即可开始进行ROS学习与开发。</p>
+<h2>关于Ubuntu for ROS</h2>
 
-				<p>2014年6月，团队停止Ubuntu for ROS的维护工作原因有以下几点：</p>
+<div class='col-md-12'>
+    <div class="panel panel-danger">
+        <div class="panel-heading">
+            <h3 class="panel-title"><i class="glyphicon glyphicon-exclamation-sign"></i>南京大学LAMDA组声明：</h3>
+        </div>
+        <div class="panel-body">
+            <h4>佘元博（Yuanbo She）已从南大LAMDA研究组毕业，得到LAMDA的授权组建了本ROS技术团队，全职推进相关工作进程，愿同各位智能机器人爱好者一起走得更远！</h4>
+        </div>
+    </div>
+</div>
 
-				<ul class="simple">
-					<li>Ubuntu系统的定制打包很简单，但内容功能的优化与完善需要倾注制作者的经验和心血。而Ubuntu for ROS的发布与推广让一些商业化团队看到商机，伸手党之余还各种信息叨扰让制作者不甚其烦，没底线地进行商业忽悠也让作者感到厌恶。</li>
-					<li>团队成员对外分享经验、答疑解难，但很多劳动被商业化团队无偿利用，内部商定就此封笔停止对外分享。团队外的使用者遇到疑问常常得到错误的回答，被误导导致Ubuntu for ROS名声受损，也使团队感到烦闷。</li>
-				</ul>
-			</div>
-		</div>
-	</div>
+<div class='col-md-6'>
+    <div class="panel panel-success">
+        <div class="panel-heading">
+            <h3 class="panel-title"><i class="glyphicon glyphicon-th-list"></i> 历史：</h3>
+        </div>
+        <div class="panel-body">
+            <ul class="simple">
+                <li>2013年，Ubuntu for ROS诞生于<span style="color: #ff0000;"><strong>南京大学计算机软件新技术国家重点实验室机器学习与数据挖掘研究组（LAMDA）</strong></span>，由负责智能机器人系统架构与开发的佘元博（Yuanbo She）同学设计制作完成。</li>
+                <li>设计制作Ubuntu for ROS的初衷，是节约ROS开发团队的开发环境部署时间。</li>
+                <li>2014年1月30日，作为ExBot网上机器人兴趣小组的创始人之一，Yuanbo She以ExBot小组的名义通过ExBot机器人社区（http://blog.exbot.net/archives/702）对外发布分享Ubuntu for ROS，并编写初级使用教程，让广大ROS爱好者受益。</li>
+                <li>2014年5月20日，发布完520版本后，Ubuntu for ROS的维护工作停止，其他版本以及其他团队的类似定制版Ubuntu与本ROS技术团队无关。</li>
+                <li>2015年7月，设计制作Ubuntu for ROS的原班人马正式全职，重新为大家维护ROS定制版Ubuntu iso，并推出更完善的使用教程。</li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<div class='col-md-6'>
+    <div class="panel panel-success">
+        <div class="panel-heading">
+            <h3 class="panel-title"><i class="glyphicon glyphicon-th-list"></i>说明：</h3>
+        </div>
+        <div class="panel-body">
+            <p>Ubuntu for ROS是一款基于ROS开发的定制版Ubuntu系统，按照常规的方式部署和配置ROS学习与开发环境需要有经验的开发者花费数小时甚至一两天（网络不好的情况下）完成，而使用Ubuntu for ROS对于一个完全没有经验的开发者来说，也只需要10分钟即可开始进行ROS学习与开发。</p>
+
+            <p>2014年6月，团队停止Ubuntu for ROS的维护工作原因有以下几点：</p>
+
+            <ul class="simple">
+                <li>Ubuntu系统的定制打包很简单，但内容功能的优化与完善需要倾注制作者的经验和心血。而Ubuntu for ROS的发布与推广让一些商业化团队看到商机，伸手党之余还各种信息叨扰让制作者不甚其烦，没底线地进行商业忽悠也让作者感到厌恶。</li>
+                <li>团队成员对外分享经验、答疑解难，但很多劳动被商业化团队无偿利用，内部商定就此封笔停止对外分享。团队外的使用者遇到疑问常常得到错误的回答，被误导导致Ubuntu for ROS名声受损，也使团队感到烦闷。</li>
+            </ul>
+        </div>
+    </div>
 </div>
 
 		<div id="uyan_frame"></div>
