--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>AICRobo官网-爱啃萝卜机器人-智能移动机器人专家！</title>
     <meta name="google-site-verification" content="0mXr6Pg187Q4q6NgNglcunnBiVqqS1L4yKV6loUWYkY"/>
 	<meta name="baidu-site-verification" content="QKTXqDPfbb" />
+	<meta name="baidu-site-verification" content="kitit5OtPW" />
 	<meta baidu-gxt-verify-token="e040d82b91018704584e4a686e820114">
     <!--[if lt ie 9]>
       <script type="text/javascript" src="//cdn.bootcss.com/html5shiv/r29/html5.min.js"></script>
